--- a/notebooks/pytorch_mnist.ipynb
+++ b/notebooks/pytorch_mnist.ipynb
@@ -49,7 +49,7 @@
     "LEARNING_RATE=0.01\n",
     "MOMENTUM=0.5\n",
     "RANDOM_SEED=42\n",
-    "CUDA=False\n",
+    "CUDA=torch.cuda.is_available()\n",
     "IMAGE_NORM=(0.1307,), (0.3081,)\n"
    ]
   },
@@ -75,7 +75,7 @@
     "    \n",
     "\n",
     "train_loader = get_data_loader(True, TRAIN_BATCH, download=True)\n",
-    "test_loader = get_data_loader(False, TEST_BATCH)\n"
+    "test_loader = get_data_loader(False, TEST_BATCH, download=True)\n"
    ]
   },
   {
@@ -91,7 +91,7 @@
     "class Net(nn.Module):\n",
     "    #This defines the structure of the NN.\n",
     "    def __init__(self):\n",
-    "        NUM_CLASSES = 9\n",
+    "        NUM_CLASSES = 10\n",
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 10, kernel_size=5)\n",
     "        self.conv2 = nn.Conv2d(10, 20, kernel_size=5)\n",
@@ -129,7 +129,7 @@
     "        if CUDA:\n",
     "            data, target = data.cuda(), target.cuda()\n",
     "        #Variables in Pytorch are differenciable. \n",
-    "        data, target = Variable(data), Variable(target)\n",
+    "        #data, target = Variable(data), Variable(target)\n",
     "        #This will zero out the gradients for this batch. \n",
     "        optimizer.zero_grad()\n",
     "        output = model(data)\n",
@@ -149,14 +149,15 @@
     "    model.eval()\n",
     "    test_loss = 0\n",
     "    correct = 0\n",
-    "    for data, target in test_loader:\n",
-    "        if CUDA:\n",
-    "            data, target = data.cuda(), target.cuda()\n",
-    "        data, target = Variable(data, volatile=True), Variable(target)\n",
-    "        output = model(data)\n",
-    "        test_loss += F.nll_loss(output, target, size_average=False).data # sum up batch loss\n",
-    "        pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
-    "        correct += pred.eq(target.data.view_as(pre)).long().cpu().sum()\n",
+    "    with torch.no_grad():\n",
+    "        for data, target in test_loader:\n",
+    "            if CUDA:\n",
+    "                data, target = data.cuda(), target.cuda()\n",
+    "        #data, target = Variable(data, volatile=True), Variable(target)\n",
+    "            output = model(data)\n",
+    "            test_loss += F.nll_loss(output, target, reduction='sum').data # sum up batch loss\n",
+    "            pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
+    "            correct += pred.eq(target.data.view_as(pred)).long().cpu().sum()\n",
     "\n",
     "    test_loss /= len(test_loader.dataset)\n",
     "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
@@ -185,15 +186,6 @@
     "    train(epoch)\n",
     "    test()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "GoGibUPnoeMU"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -216,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
