--- a/notebooks/pytorch_mnist.ipynb
+++ b/notebooks/pytorch_mnist.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "VVWx01mzoeMO"
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "RruJYkGvoeMO"
    },
@@ -55,12 +55,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "0-Cm7v2ioeMQ",
     "outputId": "5f10f501-45b8-49ad-cdb7-07ccdd7645ba"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 403: Forbidden\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz to ../data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/train-images-idx3-ubyte.gz to ../data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 403: Forbidden\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz to ../data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/train-labels-idx1-ubyte.gz to ../data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 403: Forbidden\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz to ../data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/t10k-images-idx3-ubyte.gz to ../data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 403: Forbidden\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz to ../data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/t10k-labels-idx1-ubyte.gz to ../data/MNIST/raw\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#load the data\n",
     "def get_data_loader(is_train, batch_size, download=False):\n",
@@ -80,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "tB2TFESdoeMR"
    },
@@ -91,7 +189,7 @@
     "class Net(nn.Module):\n",
     "    #This defines the structure of the NN.\n",
     "    def __init__(self):\n",
-    "        NUM_CLASSES = 0\n",
+    "        NUM_CLASSES = 10\n",
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 10, kernel_size=5)\n",
     "        self.conv2 = nn.Conv2d(10, 20, kernel_size=5)\n",
@@ -116,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "DLFSjzRaoeMS"
    },
@@ -156,7 +254,7 @@
     "        output = model(data)\n",
     "        test_loss += F.nll_loss(output, target, size_average=False).data # sum up batch loss\n",
     "        pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
-    "        # ToDo: correct = ???\n",
+    "        correct += pred.eq(target.data.view_as(pred)).long().cpu().sum()\n",
     "\n",
     "    test_loss /= len(test_loader.dataset)\n",
     "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
@@ -168,12 +266,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "cuvVpwSWoeMT",
     "outputId": "784283a9-719b-47df-a976-513163f95337"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Epoch: 1 [0/60000 (0%)]\tLoss: 2.307122\n",
+      "Train Epoch: 1 [12800/60000 (21%)]\tLoss: 2.265629\n",
+      "Train Epoch: 1 [25600/60000 (43%)]\tLoss: 2.062478\n",
+      "Train Epoch: 1 [38400/60000 (64%)]\tLoss: 1.481028\n",
+      "Train Epoch: 1 [51200/60000 (85%)]\tLoss: 1.208902\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/44/8zdpy8r171b1gtjxsygngk2w0000gn/T/ipykernel_6298/1653978638.py:30: UserWarning: volatile was removed and now has no effect. Use `with torch.no_grad():` instead.\n",
+      "  data, target = Variable(data, volatile=True), Variable(target)\n",
+      "/Users/tuanhungnguyen/Desktop/intern-skills/silverpond/lib/python3.9/site-packages/torch/nn/_reduction.py:42: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
+      "  warnings.warn(warning.format(ret))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Test set: Average loss: 0.5501, Accuracy: 8718/10000 (87%)\n",
+      "\n",
+      "Train Epoch: 2 [0/60000 (0%)]\tLoss: 0.940532\n",
+      "Train Epoch: 2 [12800/60000 (21%)]\tLoss: 0.840793\n",
+      "Train Epoch: 2 [25600/60000 (43%)]\tLoss: 0.726572\n",
+      "Train Epoch: 2 [38400/60000 (64%)]\tLoss: 0.533631\n",
+      "Train Epoch: 2 [51200/60000 (85%)]\tLoss: 0.666309\n",
+      "\n",
+      "Test set: Average loss: 0.2825, Accuracy: 9226/10000 (92%)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model = Net()\n",
     "if CUDA:\n",
@@ -216,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
