--- a/notebooks/pytorch_mnist.ipynb
+++ b/notebooks/pytorch_mnist.ipynb
@@ -22,7 +22,8 @@
    "source": [
     "#Import Libraries\n",
     "\n",
-    "\n",
+    "%pip install torch\n",
+    "%pip install torch torchvision\n",
     "import argparse\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -91,7 +92,7 @@
     "class Net(nn.Module):\n",
     "    #This defines the structure of the NN.\n",
     "    def __init__(self):\n",
-    "        NUM_CLASSES = 0\n",
+    "        NUM_CLASSES = 10\n",
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 10, kernel_size=5)\n",
     "        self.conv2 = nn.Conv2d(10, 20, kernel_size=5)\n",
@@ -111,7 +112,13 @@
     "        #Fully Connected Layer/Activation\n",
     "        x = self.fc2(x)\n",
     "        #Softmax gets probabilities. \n",
-    "        return F.log_softmax(x, dim=1)\n"
+    "        return F.log_softmax(x, dim=1)\n",
+    "    \n",
+    "model = Net()\n",
+    "if CUDA:\n",
+    "    model.cuda()\n",
+    "\n",
+    "optimizer = optim.SGD(model.parameters(), lr=LEARNING_RATE, momentum=MOMENTUM)\n"
    ]
   },
   {
@@ -157,6 +164,7 @@
     "        test_loss += F.nll_loss(output, target, size_average=False).data # sum up batch loss\n",
     "        pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
     "        # ToDo: correct = ???\n",
+    "        correct += pred.eq(target.data.view_as(pred)).long().cpu().sum()\n",
     "\n",
     "    test_loss /= len(test_loader.dataset)\n",
     "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
@@ -175,11 +183,6 @@
    },
    "outputs": [],
    "source": [
-    "model = Net()\n",
-    "if CUDA:\n",
-    "    model.cuda()\n",
-    "\n",
-    "optimizer = optim.SGD(model.parameters(), lr=LEARNING_RATE, momentum=MOMENTUM)\n",
     "\n",
     "for epoch in range(1, EPOCHS + 1):\n",
     "    train(epoch)\n",
@@ -216,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
