--- a/notebooks/pytorch_mnist.ipynb
+++ b/notebooks/pytorch_mnist.ipynb
@@ -21,16 +21,13 @@
    "outputs": [],
    "source": [
     "#Import Libraries\n",
-    "\n",
-    "\n",
     "import argparse\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "from torchvision import datasets, transforms\n",
-    "from torch.autograd import Variable\n",
-    "\n"
+    "from torch.autograd import Variable"
    ]
   },
   {
@@ -41,7 +38,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "DATA_DIR='../data'\n",
     "TRAIN_BATCH=256\n",
     "TEST_BATCH=1000\n",
@@ -50,7 +46,7 @@
     "MOMENTUM=0.5\n",
     "RANDOM_SEED=42\n",
     "CUDA=False\n",
-    "IMAGE_NORM=(0.1307,), (0.3081,)\n"
+    "IMAGE_NORM=(0.1307,), (0.3081,)"
    ]
   },
   {
@@ -75,7 +71,7 @@
     "    \n",
     "\n",
     "train_loader = get_data_loader(True, TRAIN_BATCH, download=True)\n",
-    "test_loader = get_data_loader(False, TEST_BATCH)\n"
+    "test_loader = get_data_loader(False, TEST_BATCH)"
    ]
   },
   {
@@ -86,18 +82,15 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "class Net(nn.Module):\n",
     "    #This defines the structure of the NN.\n",
     "    def __init__(self):\n",
-    "        NUM_CLASSES = 0\n",
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 10, kernel_size=5)\n",
     "        self.conv2 = nn.Conv2d(10, 20, kernel_size=5)\n",
     "        self.conv2_drop = nn.Dropout2d()  #Dropout\n",
     "        self.fc1 = nn.Linear(320, 50)\n",
-    "        self.fc2 = nn.Linear(50, NUM_CLASSES)\n",
+    "        self.fc2 = nn.Linear(50, 10) # defined the num_classes in the net class to 10\n",
     "\n",
     "    def forward(self, x):\n",
     "        #Convolutional Layer/Pooling Layer/Activation\n",
@@ -111,7 +104,7 @@
     "        #Fully Connected Layer/Activation\n",
     "        x = self.fc2(x)\n",
     "        #Softmax gets probabilities. \n",
-    "        return F.log_softmax(x, dim=1)\n"
+    "        return F.log_softmax(x, dim=1)"
    ]
   },
   {
@@ -122,14 +115,13 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "def train(epoch):\n",
     "    model.train()\n",
     "    for batch_idx, (data, target) in enumerate(train_loader):\n",
     "        if CUDA:\n",
     "            data, target = data.cuda(), target.cuda()\n",
     "        #Variables in Pytorch are differenciable. \n",
-    "        data, target = Variable(data), Variable(target)\n",
+    "        #data, target = Variable(data), Variable(target)  #removing this because variable wrappers are deprecated and not supported in pytorch \n",
     "        #This will zero out the gradients for this batch. \n",
     "        optimizer.zero_grad()\n",
     "        output = model(data)\n",
@@ -149,21 +141,20 @@
     "    model.eval()\n",
     "    test_loss = 0\n",
     "    correct = 0\n",
-    "    for data, target in test_loader:\n",
-    "        if CUDA:\n",
-    "            data, target = data.cuda(), target.cuda()\n",
-    "        data, target = Variable(data, volatile=True), Variable(target)\n",
-    "        output = model(data)\n",
-    "        test_loss += F.nll_loss(output, target, size_average=False).data # sum up batch loss\n",
-    "        pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
-    "        # ToDo: correct = ???\n",
+    "    with torch.no_grad(): \n",
+    "        for data, target in test_loader:\n",
+    "            if CUDA:\n",
+    "                data, target = data.cuda(), target.cuda()\n",
+    "            #data, target = Variable(data), Variable(target) # removing this because variable wrappers are no longer needed\n",
+    "            output = model(data)\n",
+    "            test_loss += F.nll_loss(output, target, size_average=False).data # sum up batch loss\n",
+    "            pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
+    "            correct += pred.eq(target.data.view_as(pred)).sum() #eq method to compare the predicted labels with the target labels.\n",
     "\n",
     "    test_loss /= len(test_loader.dataset)\n",
     "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
     "        test_loss, correct, len(test_loader.dataset),\n",
-    "        100. * correct / len(test_loader.dataset)))\n",
-    "\n",
-    "\n"
+    "        100. * correct / len(test_loader.dataset)))"
    ]
   },
   {
@@ -178,22 +169,12 @@
     "model = Net()\n",
     "if CUDA:\n",
     "    model.cuda()\n",
-    "\n",
     "optimizer = optim.SGD(model.parameters(), lr=LEARNING_RATE, momentum=MOMENTUM)\n",
     "\n",
     "for epoch in range(1, EPOCHS + 1):\n",
     "    train(epoch)\n",
-    "    test()\n"
+    "    test()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "GoGibUPnoeMU"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -216,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
