--- a/notebooks/pytorch_mnist.ipynb
+++ b/notebooks/pytorch_mnist.ipynb
@@ -147,7 +147,7 @@
     "                data, target = data.cuda(), target.cuda()\n",
     "            #data, target = Variable(data), Variable(target) # removing this because variable wrappers are no longer needed\n",
     "            output = model(data)\n",
-    "            test_loss += F.nll_loss(output, target, size_average=False).data # sum up batch loss\n",
+    "            test_loss += F.nll_loss(output, target, reduction='sum').data # sum up batch loss; Modified the code to use reduction insted of size_average\n",
     "            pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
     "            correct += pred.eq(target.data.view_as(pred)).sum() #eq method to compare the predicted labels with the target labels.\n",
     "\n",
@@ -175,6 +175,20 @@
     "    train(epoch)\n",
     "    test()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
