--- a/notebooks/pytorch_mnist.ipynb
+++ b/notebooks/pytorch_mnist.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "VVWx01mzoeMO"
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "RruJYkGvoeMO"
    },
@@ -49,18 +49,116 @@
     "LEARNING_RATE=0.01\n",
     "MOMENTUM=0.5\n",
     "RANDOM_SEED=42\n",
-    "CUDA=False\n",
+    "CUDA=torch.cuda.is_available()\n",
     "IMAGE_NORM=(0.1307,), (0.3081,)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "0-Cm7v2ioeMQ",
     "outputId": "5f10f501-45b8-49ad-cdb7-07ccdd7645ba"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 403: Forbidden\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz to ../data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/train-images-idx3-ubyte.gz to ../data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 403: Forbidden\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz to ../data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/train-labels-idx1-ubyte.gz to ../data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 403: Forbidden\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz to ../data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/t10k-images-idx3-ubyte.gz to ../data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Failed to download (trying next):\n",
+      "HTTP Error 403: Forbidden\n",
+      "\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz to ../data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/t10k-labels-idx1-ubyte.gz to ../data/MNIST/raw\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#load the data\n",
     "def get_data_loader(is_train, batch_size, download=False):\n",
@@ -80,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "tB2TFESdoeMR"
    },
@@ -91,7 +189,7 @@
     "class Net(nn.Module):\n",
     "    #This defines the structure of the NN.\n",
     "    def __init__(self):\n",
-    "        NUM_CLASSES = 0\n",
+    "        NUM_CLASSES = 10\n",
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 10, kernel_size=5)\n",
     "        self.conv2 = nn.Conv2d(10, 20, kernel_size=5)\n",
@@ -116,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "DLFSjzRaoeMS"
    },
@@ -149,14 +247,15 @@
     "    model.eval()\n",
     "    test_loss = 0\n",
     "    correct = 0\n",
-    "    for data, target in test_loader:\n",
-    "        if CUDA:\n",
-    "            data, target = data.cuda(), target.cuda()\n",
-    "        data, target = Variable(data, volatile=True), Variable(target)\n",
-    "        output = model(data)\n",
-    "        test_loss += F.nll_loss(output, target, size_average=False).data # sum up batch loss\n",
-    "        pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
-    "        # ToDo: correct = ???\n",
+    "    with torch.no_grad():\n",
+    "        for data, target in test_loader:\n",
+    "            if CUDA:\n",
+    "                data, target = data.cuda(), target.cuda()\n",
+    "            data, target = Variable(data), Variable(target)\n",
+    "            output = model(data)\n",
+    "            test_loss += F.nll_loss(output, target, reduction='sum').data # sum up batch loss\n",
+    "            pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
+    "            correct += pred.eq(target.detach().view_as(pred)).long().sum().cpu()\n",
     "\n",
     "    test_loss /= len(test_loader.dataset)\n",
     "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
@@ -168,12 +267,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "cuvVpwSWoeMT",
     "outputId": "784283a9-719b-47df-a976-513163f95337"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Epoch: 1 [0/60000 (0%)]\tLoss: 2.293085\n",
+      "Train Epoch: 1 [12800/60000 (21%)]\tLoss: 2.230205\n",
+      "Train Epoch: 1 [25600/60000 (43%)]\tLoss: 1.935080\n",
+      "Train Epoch: 1 [38400/60000 (64%)]\tLoss: 1.447379\n",
+      "Train Epoch: 1 [51200/60000 (85%)]\tLoss: 1.029278\n",
+      "\n",
+      "Test set: Average loss: 0.5847, Accuracy: 8550/10000 (86%)\n",
+      "\n",
+      "Train Epoch: 2 [0/60000 (0%)]\tLoss: 1.039168\n",
+      "Train Epoch: 2 [12800/60000 (21%)]\tLoss: 0.938125\n",
+      "Train Epoch: 2 [25600/60000 (43%)]\tLoss: 0.670314\n",
+      "Train Epoch: 2 [38400/60000 (64%)]\tLoss: 0.647950\n",
+      "Train Epoch: 2 [51200/60000 (85%)]\tLoss: 0.578061\n",
+      "\n",
+      "Test set: Average loss: 0.3358, Accuracy: 9052/10000 (91%)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model = Net()\n",
     "if CUDA:\n",
@@ -216,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
