--- a/notebooks/pytorch_mnist.ipynb
+++ b/notebooks/pytorch_mnist.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "VVWx01mzoeMO"
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "RruJYkGvoeMO"
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "0-Cm7v2ioeMQ",
     "outputId": "5f10f501-45b8-49ad-cdb7-07ccdd7645ba"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "tB2TFESdoeMR"
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "DLFSjzRaoeMS"
    },
@@ -156,7 +156,9 @@
     "        with torch.no_grad():\n",
     "            data, target = Variable(data), Variable(target)\n",
     "        output = model(data)\n",
-    "        test_loss += F.nll_loss(output, target, size_average=False).data # sum up batch loss\n",
+    "        test_loss += F.nll_loss(output, target, reduction='sum').data # sum up batch loss\n",
+    "        #size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
+    "        \n",
     "        pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
     "        # Comparing the predictions with targets, counting correct predictions, and adding them to total.\n",
     "        correct += pred.eq(target.view_as(pred)).sum().item()\n",
@@ -189,7 +191,27 @@
     "id": "cuvVpwSWoeMT",
     "outputId": "784283a9-719b-47df-a976-513163f95337"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Epoch: 1 [0/60000 (0%)]\tLoss: 2.335613\n",
+      "Train Epoch: 1 [12800/60000 (21%)]\tLoss: 2.206762\n",
+      "Train Epoch: 1 [25600/60000 (43%)]\tLoss: 1.924677\n",
+      "Train Epoch: 1 [38400/60000 (64%)]\tLoss: 1.326306\n",
+      "Train Epoch: 1 [51200/60000 (85%)]\tLoss: 0.944735\n",
+      "\n",
+      "Test set: Average loss: 0.4984, Accuracy: 8758/10000 (88%)\n",
+      "\n",
+      "Train Epoch: 2 [0/60000 (0%)]\tLoss: 0.855104\n",
+      "Train Epoch: 2 [12800/60000 (21%)]\tLoss: 0.831246\n",
+      "Train Epoch: 2 [25600/60000 (43%)]\tLoss: 0.686011\n",
+      "Train Epoch: 2 [38400/60000 (64%)]\tLoss: 0.717873\n",
+      "Train Epoch: 2 [51200/60000 (85%)]\tLoss: 0.579451\n"
+     ]
+    }
+   ],
    "source": [
     "model = Net()\n",
     "if CUDA:\n",
