fixed mnist issues

--- a/notebooks/pytorch_mnist.ipynb
+++ b/notebooks/pytorch_mnist.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "VVWx01mzoeMO"
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "RruJYkGvoeMO"
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "0-Cm7v2ioeMQ",
     "outputId": "5f10f501-45b8-49ad-cdb7-07ccdd7645ba"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "tB2TFESdoeMR"
    },
@@ -91,7 +91,7 @@
     "class Net(nn.Module):\n",
     "    #This defines the structure of the NN.\n",
     "    def __init__(self):\n",
-    "        NUM_CLASSES = 0\n",
+    "        NUM_CLASSES = 10 # digits 0 - 9, 10 classes\n",
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 10, kernel_size=5)\n",
     "        self.conv2 = nn.Conv2d(10, 20, kernel_size=5)\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "DLFSjzRaoeMS"
    },
@@ -149,14 +149,16 @@
     "    model.eval()\n",
     "    test_loss = 0\n",
     "    correct = 0\n",
-    "    for data, target in test_loader:\n",
-    "        if CUDA:\n",
-    "            data, target = data.cuda(), target.cuda()\n",
-    "        data, target = Variable(data, volatile=True), Variable(target)\n",
-    "        output = model(data)\n",
-    "        test_loss += F.nll_loss(output, target, size_average=False).data # sum up batch loss\n",
-    "        pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
-    "        # ToDo: correct = ???\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for data, target in test_loader:\n",
+    "            if CUDA:\n",
+    "                data, target = data.cuda(), target.cuda()\n",
+    "            # data, target = Variable(data, volatile=True), Variable(target)\n",
+    "            output = model(data)\n",
+    "            test_loss += F.nll_loss(output, target, reduction='sum').item() # sum up batch loss\n",
+    "            pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
+    "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
     "\n",
     "    test_loss /= len(test_loader.dataset)\n",
     "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
@@ -168,12 +170,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "cuvVpwSWoeMT",
     "outputId": "784283a9-719b-47df-a976-513163f95337"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Epoch: 1 [0/60000 (0%)]\tLoss: 2.331630\n",
+      "Train Epoch: 1 [12800/60000 (21%)]\tLoss: 2.182170\n",
+      "Train Epoch: 1 [25600/60000 (43%)]\tLoss: 1.605758\n",
+      "Train Epoch: 1 [38400/60000 (64%)]\tLoss: 1.257545\n",
+      "Train Epoch: 1 [51200/60000 (85%)]\tLoss: 1.018610\n",
+      "\n",
+      "Test set: Average loss: 0.4966, Accuracy: 8798/10000 (88%)\n",
+      "\n",
+      "Train Epoch: 2 [0/60000 (0%)]\tLoss: 0.947084\n",
+      "Train Epoch: 2 [12800/60000 (21%)]\tLoss: 0.709530\n",
+      "Train Epoch: 2 [25600/60000 (43%)]\tLoss: 0.672632\n",
+      "Train Epoch: 2 [38400/60000 (64%)]\tLoss: 0.669024\n",
+      "Train Epoch: 2 [51200/60000 (85%)]\tLoss: 0.544134\n",
+      "\n",
+      "Test set: Average loss: 0.2854, Accuracy: 9199/10000 (92%)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model = Net()\n",
     "if CUDA:\n",
@@ -216,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
