--- a/notebooks/pytorch_mnist.ipynb
+++ b/notebooks/pytorch_mnist.ipynb
@@ -22,7 +22,6 @@
    "source": [
     "#Import Libraries\n",
     "\n",
-    "\n",
     "import argparse\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -91,7 +90,7 @@
     "class Net(nn.Module):\n",
     "    #This defines the structure of the NN.\n",
     "    def __init__(self):\n",
-    "        NUM_CLASSES = 0\n",
+    "        NUM_CLASSES = 10\n",
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 10, kernel_size=5)\n",
     "        self.conv2 = nn.Conv2d(10, 20, kernel_size=5)\n",
@@ -149,19 +148,20 @@
     "    model.eval()\n",
     "    test_loss = 0\n",
     "    correct = 0\n",
-    "    for data, target in test_loader:\n",
-    "        if CUDA:\n",
-    "            data, target = data.cuda(), target.cuda()\n",
-    "        data, target = Variable(data, volatile=True), Variable(target)\n",
-    "        output = model(data)\n",
-    "        test_loss += F.nll_loss(output, target, size_average=False).data # sum up batch loss\n",
-    "        pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
-    "        # ToDo: correct = ???\n",
+    "    with torch.no_grad():\n",
+    "        for data, target in test_loader:\n",
+    "            if CUDA:\n",
+    "                data, target = data.cuda(), target.cuda()\n",
+    "            data, target = Variable(data), Variable(target)\n",
+    "            output = model(data)\n",
+    "            test_loss += F.nll_loss(output, target, reduction=\"sum\").item() # sum up batch loss\n",
+    "            pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability\n",
+    "            correct += sum([1 for i in range(len(target)) if pred[i][0] == target[i]])\n",
     "\n",
-    "    test_loss /= len(test_loader.dataset)\n",
-    "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
-    "        test_loss, correct, len(test_loader.dataset),\n",
-    "        100. * correct / len(test_loader.dataset)))\n",
+    "        test_loss /= len(test_loader.dataset)\n",
+    "        print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
+    "            test_loss, correct, len(test_loader.dataset),\n",
+    "            100. * correct / len(test_loader.dataset)))\n",
     "\n",
     "\n"
    ]
@@ -175,6 +175,7 @@
    },
    "outputs": [],
    "source": [
+    "torch.manual_seed(RANDOM_SEED)\n",
     "model = Net()\n",
     "if CUDA:\n",
     "    model.cuda()\n",
@@ -216,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
