feat(test): implement test for model evaluation & printing out metrics

--- a/notebooks/shape_classifier.ipynb
+++ b/notebooks/shape_classifier.ipynb
@@ -144,14 +144,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "272fac78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install scikit-learn\n",
+    "!pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import precision_recall_fscore_support, confusion_matrix, classification_report\n",
+    "import pandas as pd\n",
+    "\n",
     "def test(model, test_loader):\n",
     "    \"\"\"Print the Precision, Recall and F1-score for the trained model\n",
     "    \"\"\"\n",
-    "    pass"
+    "    # Set the model into evaluation mode\n",
+    "    model.eval()\n",
+    "\n",
+    "    all_predictions = []\n",
+    "    all_labels = []  # the ground truth label for each image\n",
+    "\n",
+    "    # Collect all prediction data & their ground truth label\n",
+    "    with torch.no_grad():\n",
+    "        for images, labels in test_loader:\n",
+    "            images = images.to(device)\n",
+    "            labels = labels.to(device)\n",
+    "\n",
+    "            outputs = model(images)\n",
+    "            _, predicted = torch.max(outputs, 1)\n",
+    "\n",
+    "            all_predictions.extend(predicted.cpu().numpy())\n",
+    "            all_labels.extend(labels.cpu().numpy())\n",
+    "    all_predictions = torch.tensor(all_predictions)\n",
+    "    all_labels = torch.tensor(all_labels)\n",
+    "    \n",
+    "    # Print out the required metrics\n",
+    "    print_metrics(all_predictions, all_labels, test_dataset.classes)\n",
+    "\n",
+    "\n",
+    "def print_metrics(predictions, truth_label, class_names):\n",
+    "    # Print out confusion matrix for each classes\n",
+    "    print(\"Confusion Matrix:\")\n",
+    "    conf_matrix = confusion_matrix(truth_label, predictions)\n",
+    "    print(pd.DataFrame(conf_matrix, index=class_names, columns=class_names))\n",
+    "\n",
+    "    # Print out percision/recall/f1-score each classes\n",
+    "    print(\"\\n\")\n",
+    "    print(\"Classification Report:\")\n",
+    "    print(classification_report(truth_label, predictions, target_names=class_names, zero_division=0))\n",
+    "\n",
+    "    # Print out the overall marco averaged score & accuracy\n",
+    "    print(\"\\n\")\n",
+    "    print(\"Overall Averaged:\")\n",
+    "    precision, recall, f1, _ = precision_recall_fscore_support(\n",
+    "        truth_label, predictions, average='macro', zero_division=0\n",
+    "    )\n",
+    "    print(f\"Precision: {precision:.2f}\")\n",
+    "    print(f\"Recall: {recall:.2f}\")\n",
+    "    print(f\"F1-score: {f1:.2f}\")\n",
+    "    print(\"\\n\")\n",
+    "    print(\"Overall Accuracy: \", (truth_label == predictions).sum().item() / len(truth_label)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a6d5213",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(model, test_loader)"
    ]
   },
   {
