feat(test): implement show_prediction method to overlay prob&label

--- a/notebooks/shape_classifier.ipynb
+++ b/notebooks/shape_classifier.ipynb
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "272fac78",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a6d5213",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "source": [
     "# Show Predictions\n"
@@ -234,15 +234,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "def show_prediction(model, image):\n",
     "    \"\"\"Pass the image to the model and overlay the predicted shape and confidence on the input\n",
     "    image and display it\n",
     "    \"\"\"\n",
-    "    pass"
+    "    # get the result\n",
+    "    transformed = transform(image).unsqueeze(0).to(device)\n",
+    "    confidence, predicted_shape = get_prediction(model, transformed)\n",
+    "\n",
+    "    # overlay the data and plt the diagram\n",
+    "    plt.title(f'Predicted Shape: {predicted_shape}\\nwith a Confidence of {confidence:.2f}')\n",
+    "    plt.imshow(image, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n",
+    "\n",
+    "def get_prediction(model, image):\n",
+    "    # Set model to evaluation mode\n",
+    "    model.eval()\n",
+    "\n",
+    "    # Predict the result and get prob\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(image)\n",
+    "        probs = F.softmax(outputs, dim=1)\n",
+    "        confidence, predicted = torch.max(probs, dim=1)\n",
+    "    \n",
+    "    # return the prob and the label correspond to the highest prob\n",
+    "    return confidence.cpu().item(), test_dataset.classes[predicted.cpu().item()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "\n",
+    "show_prediction(model, Image.open(test_data_root + '/diamond/diamond_101.png'))"
    ]
   }
  ],
